--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     </div>
     
-
+    <footer >Made with ❤️ by <a href="https://abhishek-bhatkar.netlify.app/">Abhishek Bhatkar</a></footer>
 
     <script src="./index.js" type="text/javascript"></script>
 </body>
